Add InputLoop tests